# MarkerTrackingGAStudien

./: .gitignore  README.md
ViconAPIDataExport/: .gitignore  README.md  pom.xml
camera-configs/: experiment-0.xcp  experiment-1.xcp  experiment-2.xcp  experiment-3.xcp  experiment-4-5.xcp  experiment-4.xcp
csvdata/: dump-all-cams.csv  dump-cam-4-and-6-5-markers.csv
csvdata/experiment-0/: dump-cam-4-and-6.csv  marker-dump-2025-10-15T19:09:28.828342163.csv
csvdata/experiment-1/: centroid-dump-1-marker-cam-4-and-7.csv  centroid-dump-4-markers-all-cams.csv  marker-dump-1-marker-all-cams.csv  marker-dump-4-markers-all-cams.csv
python-prototype-LA/: multi_camera_line_dump.py  playground.py  pyproject.toml  requirements.txt
python-prototype-LA/algorithms/: lsp.py  lvp.py
python-prototype-LA/geometry/: rays.py  transforms.py
python-prototype-LA/iotools/: camera_config_parser.py  csv_parser.py
python-prototype-LA/model/: calibration.py  camera.py  distortion.py
python-prototype-LA/model/geometric_algebra/: central_projection.py  central_projection_to_px.py  dist_to_line.py  epipolar_line.py  image_plane.py
python-prototype-LA/model/geometric_algebra/clu/: central_projection.clu  central_projection_to_px.clu  dist_to_line.clu  epipolar_line.clu  image_plane.clu
python-prototype-LA/scripts/: compare_epipolar_distance.py  compare_projection.py  distortion.py  experiment-3-1.py  experiment-3-3.py  experiment-3-4-5.py  visualisation-Abb-13-16.py
python-prototype-LA/visualisation/: image_plane_grid.py  scene.py
(+25 files in other folders)
