[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-prototype"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.3.5",
    "beartype>=0.18",
    "numpy>=2.4.1",
    "wadler-lindig>=0.1.7",
    "scipy",
    "matplotlib",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["algorithms*", "geometry*", "iotools*", "model*", "visualisation*", "scripts*"]

[tool.mypy]
plugins = ["jaxtyping.mypy_plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true
